--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -11,12 +11,11 @@
   height: 83.7%;
 
   display: grid;
-  grid-template-columns: 45% 55%;
-  grid-template-rows: 60px 1fr 60px;
+  grid-template-columns: 20% 80%;
+  grid-template-rows: 60px 1fr;
   grid-template-areas:
-    ' head head '
-    ' map detail '
-    ' foot foot ';
+    " head head "
+    " map detail ";
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -35,14 +34,14 @@
   .modal-wrapper {
     grid-template-rows: 60px 1fr 1fr 54px;
     grid-template-areas:
-      ' head head '
-      ' map map '
-      ' detail detail '
-      ' foot foot ';
+      " head head "
+      " map map "
+      " detail detail "
+      " foot foot ";
     overflow-x: hidden;
     overflow-y: scroll;
   }
-  .businessMap {
+  .navBar {
     height: 12rem;
   }
 }
@@ -51,7 +50,7 @@
   grid-area: head;
 }
 
-.modal-wrapper > .businessMap {
+.modal-wrapper > .navBar {
   grid-area: map;
 }
 
@@ -104,8 +103,8 @@
     grid-template-columns: 1fr 1fr 30px;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
-      ' title title button '
-      ' pills pills pills ';
+      " title title button "
+      " pills pills pills ";
   }
   .modal-header h3 {
     height: 40px;
@@ -114,7 +113,7 @@
     margin-left: -10px;
     margin-top: -6px;
   }
-  
+
   .modal-header > h3 {
     grid-area: title;
   }
@@ -132,8 +131,6 @@
   }
 }
 
-
-
 .close-modal-btn {
   height: 40px;
 }
@@ -148,7 +145,7 @@
   height: 3rem;
 }
 
-.businessMap {
+.navBar {
   position: relative;
 }
 
