scroll down while searching

--- a/src/styles/SearchForm.scss
+++ b/src/styles/SearchForm.scss
@@ -9,6 +9,15 @@ article {
   margin-right: 15%; */
 }
 
+#searchWrapper {
+  display: none;
+}
+
+#searchWrapper.show {
+  height: 100vh;
+  display: block;
+}
+
 .formHeader {
   font-family: Comfortaa;
   text-align: center;
