loader size and position

--- a/src/styles/SearchForm.scss
+++ b/src/styles/SearchForm.scss
@@ -19,6 +19,10 @@ article {
   display: block;
 }
 
+.loaderWrapper {
+  padding: 100px;
+}
+
 .formHeader {
   font-family: Comfortaa;
   text-align: center;
