slideshow resolution resolved

--- a/src/styles/glide.scss
+++ b/src/styles/glide.scss
@@ -1,3 +1,8 @@
+// .slide-box {
+//   background-position: center;
+//   background-size: cover;
+// }
+
 .glide--item {
   opacity: 0;
 }
@@ -5,6 +10,7 @@
 .glide--item.current {
   position: absolute;
   left: 0;
+  width: 100%;
   -webkit-transition: opacity 1s ease-in-out;
   -moz-transition: opacity 1s ease-in-out;
   -o-transition: opacity 1s ease-in-out;
