--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -137,6 +137,7 @@
   border: none;
   width: 1rem;
   color: white;
+  outline: none;
 }
 
 .modal-footer {
@@ -338,7 +339,17 @@ h1 {
   color: #f1f1f1;
 }
 
+.modalNav:focus {
+  color: #f1f1f1;
+}
+
 .modalLI {
   list-style: none;
   padding-top: 5%;
+}
+
+.componentWindow {
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
