--- a/src/styles/Accordion.scss
+++ b/src/styles/Accordion.scss
@@ -5,6 +5,10 @@
   box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
 }
 
+.accordion-section:last-child {
+  border-bottom: 0;
+}
+
 .accordion-header {
   background-color: var(--mint-text);
   padding: 1rem 2rem;
@@ -28,6 +32,7 @@
     margin: 1em 0;
     padding: 0;
   }
+  border-bottom: 1px solid black;
 }
 
 .accordion-button {
@@ -54,15 +59,36 @@
   }
 }
 
+.accordion-button:last-child {
+  border-bottom: 0;
+}
+
 .accordion-button:hover {
   background-color: var(--shadow);
   color: var(--off-white) !important;
+}
+
+.accordionImageContainer {
+  height: 10rem;
+  min-width: 10rem;
+  border: 1px solid var(--off-white);
+  overflow: hidden;
+}
+
+.accordionImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 @media all and (max-width: 860px) {
   .accordion-button,
   .accordion-section {
     font-size: 1rem;
+  }
+  .accordionImageContainer {
+    min-width: 0;
+    width: 10rem;
   }
 }
 
