--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -82,9 +82,10 @@
   padding: 1.2rem 1rem;
   font-size: 1.2rem;
   text-transform: uppercase;
+  font-family: 'Comfortaa', script;
 }
 
-.resultCardSubtitle {
+.resultCardSubtitle, .resultCardCategories {
   color: var(--off-white);
   font-size: 1rem;
   padding: 0rem 1rem;
@@ -103,4 +104,14 @@
   margin-left: 1rem;
   margin-bottom: 1rem;
   margin-top: 1rem;
+}
+
+.resultCard p {
+  margin: 0;
+  padding: 10px 0;
+}
+
+.resultCard span:last-child {
+  margin-top: auto;
+  margin-bottom: 0.5rem;
 }
