--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -18,14 +18,14 @@ body {
     box-sizing: border-box;*/
 }
 
-p {
-  max-width: 600px;
-  margin: auto;
-  padding: 15px 90px;
-  letter-spacing: 0.35px;
-  font-weight: 400;
-  font-size: 20px;
-}
+// p {
+//   max-width: 600px;
+//   margin: auto;
+//   padding: 15px 90px;
+//   letter-spacing: 0.35px;
+//   font-weight: 400;
+//   font-size: 20px;
+// }
 
 h2 {
   margin: 0;
@@ -37,12 +37,6 @@ h2 {
   line-height: 1rem;
   display: block;
   text-align: center;
-  /* box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
-  background: radial-gradient(
-    circle,
-    rgba(39, 39, 39, 0.85),
-    rgba(0, 0, 0, 0.27) 70%
-  ); */
 }
 
 section img ul h3 {
