--- a/src/styles/MeetTheTeam.scss
+++ b/src/styles/MeetTheTeam.scss
@@ -15,8 +15,6 @@
   text-align: center;
 }
 
-
-
 #title {
   font-weight: bold;
   padding-left: 0.6rem;
@@ -29,6 +27,7 @@
 
 .info {
   font-weight: normal;
+  text-align: center;
   /* width: 100%; */
 }
 
