--- a/src/styles/404.scss
+++ b/src/styles/404.scss
@@ -1,6 +1,6 @@
 .fourOhFourMain {
   display: flex;
-  height: 80vh;
+  min-height: calc(100vh - 175px);
   flex-direction: column;
   justify-content: center;
 }
@@ -13,4 +13,5 @@
 
 .fourOhFourSubheading {
   text-align: center;
+  color: var(--off-black);
 }
