--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -1,3 +1,6 @@
+// TODO: Needs work...
+
+// ========================================= Slideshow ============================
 .centerSplash {
   display: block;
   margin-left: auto;
@@ -165,4 +168,124 @@
     font-size: 1.5rem;
     margin-left: -1rem;
   }
+}
+
+// ======================================= Icon Content ==================================
+
+section.landing {
+  color: #fff;
+
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  margin: 0;
+  font-size: 3em;
+  text-align: center;
+}
+
+section.landing p {
+  font-size: 1.5rem;
+  margin-top: -1rem;
+  margin-bottom: 2rem;
+}
+
+section.landing h2 {
+  display: block;
+  margin-top: -2rem;
+}
+
+section.landing h3 {
+  text-align: center;
+}
+
+.light.landing {
+  color: black;
+}
+
+.mint.landing {
+  background-color: var(--mint-text);
+  /* margin-left: 4rem;
+  margin-right: 4rem; */
+  border-radius: 1.5rem;
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
+  margin: 1rem;
+  width: 30%;
+  height: 11rem;
+  font-size: 2rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+@media all and (max-width: 493px) {
+  section.landing p {
+    font-size: 0.5em;
+  }
+}
+
+@media all and (max-width: 1044px) {
+  .mint.landing {
+    height: 13rem;
+  }
+}
+
+@media all and (max-width: 860px) {
+  .mint.landing {
+    height: 6rem;
+  }
+  section.landing p {
+    font-size: 21px;
+  }
+  .content {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .mint.landing {
+    width: 17rem;
+    margin-bottom: 2rem;
+    margin-top: 1.5rem;
+  }
+}
+
+@media all and (max-width: 712px) {
+  .mint.landing {
+    width: 21rem;
+  }
+}
+
+@media all and (max-width: 610px) {
+  .mint.landing {
+    width: 19rem;
+    height: 4rem;
+  }
+}
+
+.content {
+  display: flex;
+  margin-bottom: 1.5rem;
+  margin-top: 5rem;
+}
+
+.icons {
+  display: flex;
+}
+
+.icon {
+  border-radius: 10rem;
+  width: 5rem;
+  height: 5rem;
+  background: rgb(90, 187, 158);
+  position: relative;
+  top: -6rem;
+  padding: 5px;
+  border-style: solid;
+  border-color: #fff;
+}
+
+@media all and (max-width: 493px) {
+  section.landing p {
+    font-size: 0.5em;
+  }
+}
+
+.mint.landing.last {
+  margin-bottom: -4rem;
 }
