--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -1,7 +1,3 @@
-#searchResults {
-  margin: 2rem 0rem;
-}
-
 .resultCards {
   /* margin: 2rem 0rem;
   padding: 1rem; */
@@ -85,7 +81,8 @@
   font-family: 'Comfortaa', script;
 }
 
-.resultCardSubtitle, .resultCardCategories {
+.resultCardSubtitle,
+.resultCardCategories {
   color: var(--off-white);
   font-size: 1rem;
   padding: 0rem 1rem;
