--- a/src/styles/MeetTheTeam.scss
+++ b/src/styles/MeetTheTeam.scss
@@ -1,3 +1,18 @@
+.minthalf {
+  width: 50%;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  background-color: var(--mint-text);
+  border-radius: 15px;
+  box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
+}
+
+.halfnhalf {
+  display: flex;
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
 .halfpics {
   background-color: var(--mint);
   margin-left: 1rem;
