--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -45,7 +45,7 @@
 .modal-header {
   background: var(--dark-mint);
   height: 40px;
-  /* line-height: 40px; */
+  line-height: 0.8rem;
   padding: 10px 20px;
   text-align: right;
   display: flex;
