Hotfix default font style

--- a/src/styles/Accordion.scss
+++ b/src/styles/Accordion.scss
@@ -36,7 +36,7 @@
 }
 
 .accordionButton {
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Comfortaa' sans-serif;
   background-color: var(--off-white);
   cursor: pointer;
   padding: 1rem 2rem;
