--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -2,8 +2,7 @@
 :root {
   font-size: 18px;
   line-height: 1.5 em;
-  /* font-family: 'Oswald', sans-serif; */
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Comfortaa', sans-serif;
 }
 
 body {
