Update basic account styling

--- a/src/styles/CredentialForm.scss
+++ b/src/styles/CredentialForm.scss
@@ -1,19 +1,9 @@
-.loginForm {
-  margin-top: 3rem;
-  margin-bottom: 5rem;
-  background: #5abb9e;
+.credentialForm {
+  display: flex;
+  flex-flow: column;
+  margin: 2rem auto;
+  background: var(--mint);
   padding: 2rem;
-  border-radius: 2rem;
-  height: 12rem;
-  text-align: left;
-}
-
-.signupForm {
-  margin-top: 1rem;
-  margin-bottom: 3rem;
-  background: #5abb9e;
-  padding: 2rem;
-  padding-bottom: 0.8rem;
   border-radius: 2rem;
   text-align: left;
 }
@@ -28,7 +18,7 @@
   padding-bottom: 5px;
 }
 
-.loginTitle {
+.credentialTitle {
   margin-left: 0;
   margin-bottom: 0.5rem;
   font-size: 1.7rem;
@@ -36,33 +26,27 @@
   padding: 0.5rem;
   align-self: center;
   border-style: none;
+  color: var(--off-white);
 }
 
-input {
+.credentialInput {
   width: 100%;
   margin-bottom: 0.5rem;
 }
 
-@media all and (max-width: 853px) {
-  .loginForm {
-    height: 14rem;
-    width: 14rem;
-  }
-  .signupForm {
-    width: 14rem;
-  }
-}
-
 @media all and (max-width: 709px) {
-  main {
+  .loginPage {
     flex-direction: column;
+    align-items: center;
   }
   .loginForm {
-    height: 14rem;
-    width: 14rem;
+    margin: 1rem;
+    min-width: 12rem;
+    max-width: 16rem;
   }
   .signupForm {
-    width: 14rem;
-    margin-bottom: 0rem;
+    margin: 1rem;
+    min-width: 12rem;
+    max-width: 16rem;
   }
 }
