Add aura buttons and event listeners

--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -16,7 +16,7 @@
     ' head head '
     ' map detail ';
   overflow-x: hidden;
-  overflow-y: hidden;
+  // overflow-y: hidden;
   border: none;
 }
 
