--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -20,6 +20,7 @@
   box-shadow: 5px 5px var(--shadow);
   background-color: var(--mint);
   text-align: left;
+  cursor: pointer;
 }
 
 @media all and (max-width: 360px) {
@@ -41,36 +42,6 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.pill {
-  text-align: right;
-}
-
-.resultCardAura {
-  color: var(--off-white);
-  font-size: 0.8rem;
-  padding: 0.5rem;
-  margin-top: 10px;
-  margin-left: 10px;
-  align-items: right;
-  border-color: white;
-  border-style: dotted;
-  /* background-color: rgba(90, 187, 158, 0.9); */
-  border-radius: 33px;
-}
-
-@media all and (max-width: 373px) {
-  .resultCardAura {
-    font-size: 0.55rem;
-  }
-}
-
-.pillsContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: stretch;
-  position: absolute;
 }
 
 .resultCardTitle {
@@ -111,4 +82,12 @@
 .resultCard span:last-child {
   margin-top: auto;
   margin-bottom: 0.5rem;
+}
+
+.pillsContainer {
+  position: absolute;
+  display: grid;
+  grid-auto-flow: column;
+  grid-gap: 0.5rem;
+  margin: 0.5rem;
 }
