--- a/src/styles/MeetTheTeam.scss
+++ b/src/styles/MeetTheTeam.scss
@@ -24,7 +24,7 @@
   justify-content: flex-start;
 }
 
-.halfpics .resultCardAura {
+.halfpics .auraPill {
   margin-left: 0;
   width: 4rem;
   text-align: center;
