--- a/src/styles/AuraPill.scss
+++ b/src/styles/AuraPill.scss
@@ -1,23 +1,35 @@
-.auraPillContainer {
+// FIXME: Changes to this have affected the modal pills.
+.auraPill {
+  position: relative;
   display: flex;
-  flex-flow: column;
-  align-items: center;
-  border: 0;
+  justify-content: center;
+  cursor: pointer;
+
+  // Cosmetic
+  outline: none;
+  color: var(--off-white);
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  border: 3px dotted white;
   border-radius: 33px;
-  padding: 0;
 }
 
 .auraPillToolTip {
+  display: none;
   position: absolute;
-  width: 8rem;
+  min-width: 6rem;
   bottom: 2.8rem;
   padding: 0.3rem;
+
+  // Cosmetic
+  font-size: 0.75rem;
   background: var(--off-black);
   color: var(--off-white);
   border-radius: 5px;
 }
 
-.auraPillToolTip + .arrow-down {
+.auraPillToolTip + .arrowDown {
+  display: none;
   position: absolute;
   bottom: 2rem;
   border-left: 0.5rem solid transparent;
@@ -26,14 +38,9 @@
   margin-bottom: 0.3rem;
 }
 
-// FIXME: Changes to this have affected the modal pills.
-.auraPill {
-  align-self: flex-start;
-  color: var(--off-white);
-  font-size: 0.8rem;
-  padding: 0.5rem;
-  border: 3px dotted white;
-  border-radius: 33px;
+.auraPill:focus .auraPillToolTip,
+.auraPill:focus .arrowDown {
+  display: block;
 }
 
 @media all and (max-width: 373px) {
