--- a/src/styles/AuraPill.scss
+++ b/src/styles/AuraPill.scss
@@ -3,6 +3,7 @@
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   cursor: pointer;
 
   // Cosmetic
@@ -14,34 +15,124 @@
   border-radius: 33px;
 }
 
-.auraPillToolTip {
+// Focus displays
+.auraPill:focus .auraPillToolTipTop,
+.auraPill:focus .auraPillToolTipRight,
+.auraPill:focus .auraPillToolTipBottom,
+.auraPill:focus .auraPillToolTipLeft {
+  display: block;
+}
+
+// Tool Tip Top
+.auraPillToolTipTop {
   display: none;
   position: absolute;
-  min-width: 6rem;
-  bottom: 2.8rem;
-  padding: 0.3rem;
+  bottom: 140%;
 
   // Cosmetic
+  min-width: 6rem;
+  padding: 0.3rem;
   font-size: 0.75rem;
   background: var(--off-black);
   color: var(--off-white);
   border-radius: 5px;
+
+  // Arrow Down
+  ::after {
+    content: '';
+    position: absolute;
+    top: 100%; // At the bottom of the tool tip
+    left: 50%; // HACK: Somewhat in the middle of the tool tip
+
+    margin-left: -10px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: var(--off-black) transparent transparent transparent;
+  }
 }
 
-.auraPillToolTip + .arrowDown {
+// Tool Tip Bottom
+.auraPillToolTipBottom {
   display: none;
   position: absolute;
-  bottom: 2rem;
-  border-left: 0.5rem solid transparent;
-  border-right: 0.5rem solid transparent;
-  border-top: 0.5rem solid var(--off-black);
-  margin-bottom: 0.3rem;
+  top: 140%;
+
+  // Cosmetic
+  min-width: 6rem;
+  padding: 0.3rem;
+  font-size: 0.75rem;
+  background: var(--off-black);
+  color: var(--off-white);
+  border-radius: 5px;
+
+  // Arrow Down
+  ::after {
+    content: ' ';
+    position: absolute;
+    bottom: 100%; /* At the top of the tooltip */
+    left: 50%;
+    margin-left: -10px;
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent var(--off-black) transparent;
+  }
 }
 
-.auraPill:focus .auraPillToolTip,
-.auraPill:focus .arrowDown {
-  display: block;
+// Tool Tip Right
+.auraPillToolTipRight {
+  display: none;
+  position: absolute;
+  left: 120%;
+
+  // Cosmetic
+  min-width: 6rem;
+  padding: 0.3rem;
+  font-size: 0.75rem;
+  background: var(--off-black);
+  color: var(--off-white);
+  border-radius: 5px;
+
+  // Arrow Left
+  ::after {
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    right: 100%; /* To the left of the tooltip */
+    margin-top: -8px;
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent var(--off-black) transparent transparent;
+  }
 }
+
+// Tool Tip Left
+.auraPillToolTipLeft {
+  display: none;
+  position: absolute;
+  right: 120%;
+
+  // Cosmetic
+  min-width: 6rem;
+  padding: 0.3rem;
+  font-size: 0.75rem;
+  background: var(--off-black);
+  color: var(--off-white);
+  border-radius: 5px;
+
+  // Arrow Left
+  ::after {
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    left: 100%; /* To the left of the tooltip */
+    margin-top: -8px;
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent transparent var(--off-black);
+  }
+}
+
+// Other
 
 @media all and (max-width: 373px) {
   .auraPill {
