Add hover on pill
Update order of slideshow

--- a/src/styles/AuraPill.scss
+++ b/src/styles/AuraPill.scss
@@ -23,6 +23,16 @@
   display: block;
 }
 
+@media (hover: hover) {
+  // Focus displays
+  .auraPill:hover .auraPillToolTipTop,
+  .auraPill:hover .auraPillToolTipRight,
+  .auraPill:hover .auraPillToolTipBottom,
+  .auraPill:hover .auraPillToolTipLeft {
+    display: block;
+  }
+}
+
 // Tool Tip Top
 .auraPillToolTipTop {
   display: none;
