--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,108 +1,97 @@
-.minthalf {
-  width: 50%;
-  margin-left: 2rem;
-  margin-right: 2rem;
-  background-color: var(--mint-text);
-  border-radius: 15px;
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
-}
-
-.halfnhalf {
-  display: flex;
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-
-.halfpics {
-  background-color: var(--mint);
-  margin-left: 1rem;
-  margin-right: 1rem;
-  margin-top: 1rem;
-  border-radius: 15px;
-  box-shadow: 5px 5px rgba(0, 0, 0, 0.12);
-  display: flex;
-  justify-content: flex-start;
-}
-
-.halfpics .auraPill {
-  margin-left: 0;
-  text-align: center;
-}
-
-#title {
-  font-weight: bold;
-  padding-left: 0.6rem;
-  /* width: 100%; */
-  list-style: none;
-  padding-bottom: 5px;
-  margin-top: 10px;
-  margin-left: 1rem;
-}
-
-.info {
-  font-weight: normal;
-  text-align: center;
-  /* width: 100%; */
-}
-
-.role {
-  font-weight: normal;
-  padding-bottom: 2vh;
-  margin-top: 10px;
-}
-
-.fav {
-  font-weight: normal;
-  padding-bottom: 2vh;
-}
-
-a {
-  color: #fff;
-}
-
-.halfpics img {
-  display: block;
-  max-width: 400px;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  border-radius: 15px;
-}
-
-#grid {
+.teamMemberGrid {
   display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: repeat(4, 10rem);
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+  justify-items: center;
+  grid-gap: 2rem;
+  margin: 3rem;
 }
 
-#devon {
-  grid-column-start: span 2;
-  margin-left: 10rem;
-  margin-right: 10rem;
+// Animation Transitions
+.teamMemberCardContainer {
+  height: 15rem;
+  width: 15rem;
+  perspective: 600;
+  position: relative;
+}
+.teamMemberCard {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: all 1s ease-in-out;
+
+  .side {
+    backface-visibility: hidden;
+    height: 100%;
+    position: absolute;
+    width: 100%;
+  }
+
+  .back {
+    transform: rotateY(180deg);
+  }
+}
+
+@media (hover: hover) {
+  .teamMemberCard:hover {
+    transform: rotateY(180deg);
+    outline: none;
+  }
+}
+
+@media (hover: none) {
+  .teamMemberCard:focus {
+    transform: rotateY(180deg);
+    outline: none;
+  }
+}
+
+// Standard Styling
+
+.teamMemberCard {
+  img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+    border-radius: 15px;
+  }
+
+  .teamMemberInfo {
+    display: flex;
+    flex-flow: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+    position: relative;
+
+    list-style: none;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    border-radius: 15px;
+
+    background-color: var(--mint);
+
+    .teamMemberEmailLink {
+      position: absolute;
+      bottom: 5%;
+      right: 5%;
+      color: var(--off-white);
+    }
+  }
 }
 
 /* @media all and (max-width: 493px) { */
-@media all and (max-width: 910px) {
-  #grid {
-    display: grid;
-    grid-column: 1;
-    grid-template-columns: 100%;
-    grid-template-rows: repeat(7, 10rem);
-    margin-bottom: 3rem;
-    margin-top: 3rem;
-  }
-
-  #devon {
-    grid-column-start: span 1;
-    margin-left: 1rem;
-    margin-right: 1rem;
-  }
-
-  #title {
-    font-size: 0.8rem;
-    margin-left: 0.5rem;
+@media all and (max-width: 493px) {
+  .teamMemberGrid {
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    .teamMember {
+      width: 12rem;
+      height: 12rem;
+    }
   }
 }
 
