--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -88,6 +88,11 @@
   color: var(--off-white);
   font-size: 1rem;
   padding: 0rem 1rem;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 16rem;
 }
 
 .expander {
@@ -120,5 +125,5 @@
   position: absolute;
   display: flex;
   flex-direction: row-reverse;
-  margin-top: 86%;
+  margin: 16.75rem -0.5rem;
 }
