--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -401,9 +401,9 @@
 
 .yelpLinkLI {
   list-style: none;
-  padding-top: 5%;
   display: flex;
-  margin: auto;
+  align-self: end;
+  padding-bottom: 1rem;
 }
 
 @media screen and (max-width: 860px) {
@@ -412,8 +412,14 @@
   }
 }
 
-@media screen and (max-width: 809px) {
+@media screen and (max-width: 814px) {
   .navBar {
     height: 82%;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .navBar {
+    height: 78%;
   }
 }
