Remove bottom margin on Card Footer

--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -97,7 +97,7 @@
   position: absolute;
   display: flex;
   flex-direction: row-reverse;
-  margin: 16.75rem -0.5rem;
+  margin: 16.75rem -0.5rem 0rem;
 }
 
 .pillsContainer {
