Change hipster color

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -21,7 +21,11 @@
   --groovy: #e5e249;
   --inspired: #89e87c;
   --upscale: #ea9409;
-  --hipster: #c2b0ad;
+  // --hipster: #c2b0ad;
+  // --hipster: #a26262;
+  // --hipster: #62a294;
+  // --hipster: #6282a2;
+  --hipster: #7697b8;
   --cheerful: #f1bc50;
   --peaceful: #c4efff;
   --powerful: #bc1414;
