Add hover effect to voting aura buttons

--- a/src/styles/Feedback.scss
+++ b/src/styles/Feedback.scss
@@ -22,7 +22,7 @@
 }
 
 .feedbackTabAura:hover {
-  background-color: rgba(197, 197, 197, 0);
+ background-color: rgba(197, 197, 197, 0) !important;
 }
 
 .feedbackHeader {
