--- a/src/styles/CardItem.scss
+++ b/src/styles/CardItem.scss
@@ -61,10 +61,9 @@
   font-size: 1rem;
   padding: 0rem 1rem;
   position: absolute;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 16rem;
+  top: 16rem;
 }
 
 .expander {
