--- a/src/styles/Feedback.scss
+++ b/src/styles/Feedback.scss
@@ -36,7 +36,7 @@
   text-align: center;
 }
 
-.auraFeedbackDescription {
+.feedbackDescription {
   margin-top: 1.5rem;
   padding: 1rem;
   background-color: var(--mint);
