Fix handler in feedback component

--- a/src/styles/Feedback.scss
+++ b/src/styles/Feedback.scss
@@ -3,7 +3,7 @@
     font-size: 0.8rem;
     margin-top: 10px;
     margin-left: 10px;
-    width: 4rem;
+    width: 4.7rem;
     -webkit-align-items: center;
     align-items: center;
     border-color: white;
@@ -14,7 +14,7 @@
   color: var(--off-white);
   font-size: 0.8rem;
   padding: 0.5rem;
-  width: 4rem;
+  width: 4.7rem;
   align-items: center;
   border-color: white;
   border-style: dotted;
@@ -47,4 +47,5 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  margin-bottom: 2rem;
 }
