Add poll data to donut

--- a/src/styles/Feedback.scss
+++ b/src/styles/Feedback.scss
@@ -74,8 +74,8 @@
 }
 
 .classyData {
-  stroke: var(--classy) !important;
-  fill: var(--classy) !important;
+  stroke: #7b7b7b !important;
+  fill: #7b7b7b !important;
 }
 
 .hipsterData {
