Add show button to Aura Poll

--- a/src/styles/Feedback.scss
+++ b/src/styles/Feedback.scss
@@ -112,3 +112,16 @@
   stroke: var(--trendy) !important;
   fill: var(--trendy) !important;
 }
+
+.feedbackVoteDescription{
+  font-size: 13px;
+  margin-top: 0rem;
+  align-self: center;
+}
+
+.nipsey{
+  font-family: inherit;
+  background: none;
+  border: none;
+  color: blue;
+}
