--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,33 +1,45 @@
 // TODO: Needs work. Convert to flexbox instead of doing what is done here...
 
 .pageFooter {
-  padding: 1rem;
-  padding-top: 2rem;
-  background-color: #272727;
-  color: #fff;
-  line-height: 3rem;
-  height: 2.5rem;
-  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(5rem, 10rem));
+  align-content: center;
+  justify-items: center;
+  justify-content: center;
+  align-items: center;
 
+  padding: 0.5rem;
+
+  text-align: center;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.2);
+  background-color: #272727;
+  color: var(--off-white);
 }
 
 .pageFooter p {
-  font-size: 15px;
-  display: block;
-  padding-bottom: 0px;
   padding: 0;
-  line-height: 0;
-  margin-top: -17px;
+  margin: 0;
+
   font-size: 13px;
+  color: var(--off-white);
 }
 
-.pageFooter img {
-  height: 56px;
-  margin: 0;
-  float: right;
-  padding: 0;
-  margin-top: -20px;
-  float: none;
-  padding: 0;
+.pageFooter a {
+  font-size: 13px;
+  color: var(--off-white);
+}
+
+.pageFooter div div {
+  position: relative;
+  height: 2em;
+  width: 4em;
+  margin: auto;
+  overflow: hidden;
+
+  img {
+    position: absolute;
+    width: 4em;
+    top: -40%;
+    left: 0;
+  }
 }
