--- a/src/styles/SearchResults.scss
+++ b/src/styles/SearchResults.scss
@@ -46,8 +46,10 @@
   background-color: var(--off-black);
   padding: 10px 30px;
   border-radius: 5px;
+  outline: none;
 }
 
+.loadMore:focus,
 .loadMore:hover {
   color: var(--dark-mint);
 }
