--- a/src/styles/AuraPill.scss
+++ b/src/styles/AuraPill.scss
@@ -20,7 +20,8 @@
 .auraPill:focus .auraPillToolTipRight,
 .auraPill:focus .auraPillToolTipBottom,
 .auraPill:focus .auraPillToolTipLeft {
-  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 
 @media (hover: hover) {
@@ -29,13 +30,16 @@
   .auraPill:hover .auraPillToolTipRight,
   .auraPill:hover .auraPillToolTipBottom,
   .auraPill:hover .auraPillToolTipLeft {
-    display: block;
+    visibility: visible;
+    opacity: 1;
   }
 }
 
 // Tool Tip Top
 .auraPillToolTipTop {
-  display: none;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   bottom: 140%;
 
@@ -46,6 +50,9 @@
   background: var(--off-black);
   color: var(--off-white);
   border-radius: 5px;
+
+  transition: visibility 0.2s cubic-bezier(1, 0, 0.5, 1) 0.2s,
+    opacity 0.2s cubic-bezier(1, 0, 0.5, 1) 0.2s;
 
   // Arrow Down
   ::after {
@@ -63,7 +70,9 @@
 
 // Tool Tip Bottom
 .auraPillToolTipBottom {
-  display: none;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   top: 140%;
 
@@ -75,7 +84,10 @@
   color: var(--off-white);
   border-radius: 5px;
 
-  // Arrow Down
+  transition: visibility 0.2s cubic-bezier(1, 0, 0, 1) 0.2s,
+    opacity 0.2s cubic-bezier(1, 0, 0, 1) 0.2s;
+
+  // Arrow Up
   ::after {
     content: ' ';
     position: absolute;
@@ -90,7 +102,9 @@
 
 // Tool Tip Right
 .auraPillToolTipRight {
-  display: none;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   left: 120%;
 
@@ -101,6 +115,9 @@
   background: var(--off-black);
   color: var(--off-white);
   border-radius: 5px;
+
+  transition: visibility 0.2s cubic-bezier(1, 0, 0, 1) 0.2s,
+    opacity 0.2s cubic-bezier(1, 0, 0, 1) 0.2s;
 
   // Arrow Left
   ::after {
@@ -117,7 +134,9 @@
 
 // Tool Tip Left
 .auraPillToolTipLeft {
-  display: none;
+  display: block;
+  visibility: hidden;
+  opacity: 0;
   position: absolute;
   right: 120%;
 
@@ -129,12 +148,15 @@
   color: var(--off-white);
   border-radius: 5px;
 
-  // Arrow Left
+  transition: visibility 0.2s cubic-bezier(1, 0, 0, 1) 0.2s,
+    opacity 0.2s cubic-bezier(1, 0, 0, 1) 0.2s;
+
+  // Arrow Right
   ::after {
     content: ' ';
     position: absolute;
     top: 50%;
-    left: 100%; /* To the left of the tooltip */
+    left: 100%; /* To the right of the tooltip */
     margin-top: -8px;
     border-width: 8px;
     border-style: solid;
