--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -5,6 +5,10 @@
   font-family: 'Comfortaa', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background-image: url(../assets/img/trinityBackgroundWhite.png);
 }
@@ -19,9 +23,6 @@ article {
   display: flex;
   flex-direction: column;
   text-align: center;
-
-  // margin-left: 15%;
-  // margin-right: 15%;
 }
 
 h1,
@@ -56,7 +57,6 @@ input {
   font-family: 'Raleway', sans-serif;
   text-shadow: 1px 1px rgb(198, 240, 226);
 }
-
 
 .hidden {
   display: none;
