--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -25,4 +25,15 @@
   --cheerful: #f1bc50;
   --peaceful: #c4efff;
   --powerful: #bc1414;
+  // Activities Pallete
+  --eating: #da3b26;
+  --drinking: #c049e5;
+  --dating: #49e5d6;
+  --studying: #e5da49;
+  --relaxing: #90c4fc;
+  --exercising: #1fa018;
+  --gaming: #f28324;
+  --leisure: #41eb82;
+  --pleasure: #bf0707;
+  --hobbies: #5e59c1;
 }
