--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -358,7 +358,8 @@
   width: 100%;
   height: 100%;
   position: relative;
-  overflow-x: scroll;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .businessDetails {
