--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -357,7 +357,7 @@
 .componentWindow {
   width: 100%;
   height: 100%;
-  position: relative;
+  position: initial;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
