Change overflow to y

--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -357,8 +357,8 @@
 .componentWindow {
   width: 100%;
   height: 100%;
-  position: initial;
-  overflow: scroll;
+  position: relative;
+  overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
 
