--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -15,7 +15,7 @@
   grid-template-areas:
     " head head "
     " map detail ";
-  overflow-x: hidden;
+  overflow: hidden;
   border: none;
 }
 
@@ -359,8 +359,8 @@
   width: 100%;
   height: 100%;
   position: relative;
-  // overflow-y: scroll;
-  // -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .businessDetails {
