--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -359,7 +359,8 @@
   width: 100%;
   height: 100%;
   position: relative;
-  overflow-y: scroll;
+  overflow: auto;
+  // overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
 
