--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -15,7 +15,7 @@
   grid-template-areas:
     " head head "
     " map detail ";
-  overflow: hidden;
+  overflow-x: hidden;
   border: none;
 }
 
@@ -359,9 +359,9 @@
   width: 100%;
   height: 100%;
   position: relative;
-  overflow: auto;
+  // overflow: auto;
   // overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
+  // -webkit-overflow-scrolling: touch;
 }
 
 .businessDetails {
@@ -412,7 +412,3 @@
   padding-bottom: 1rem;
 }
 
-html{ 
-  overflow: scroll; 
-  -webkit-overflow-scrolling: touch;
-}
